app/assets/styles/base/_core.scss
* {
    box-sizing: border-box;
}

html {
    width: 100%;
    scrollbar-width: auto;
    scrollbar-color: var(--color-text) var(--color-primary);
}

body {
    width: 100%;
    min-height: 100vh;
    overflow-x: hidden;
    @extend %flex-column;
    display: flex;
    flex-direction: column;
}

main {
    background-color: var(--color-secondary);
    flex: 1 0 auto;
}

section {
    padding: 2rem 1.5rem;
    min-height: calc(100vh - 8.1rem);

    @include respond-to('breakpoint-768') {
        padding: 2.5rem 5rem;
    }

    @media (max-width: 1399px) {
        min-height: calc(100vh - 8.1rem);
        height: auto;
    }
}

.section-title {
    cursor: pointer;
    @extend %flex-center;
    margin-bottom: 2rem;
    gap: 0.75rem;

    @include respond-to('breakpoint-576') {
        gap: 1rem;
    }

    @include respond-to('breakpoint-768') {
        margin-bottom: 2.5rem;
    }

    h1, h2 {
        font-size: calc(0.65 * $font-size-h1);

        @include respond-to('breakpoint-576') {
            font-size: calc(0.9 * $font-size-h1);
        }

        @include respond-to('breakpoint-992') {
            font-size: $font-size-h1;
        }
    }

    svg {
        font-size: calc(0.65 * $font-size-h1);
        width: auto;

        @include respond-to('breakpoint-576') {
            height: calc(0.9 * $font-size-h1);
        }

        @include respond-to('breakpoint-992') {
            height: $font-size-h1;
        }
    }
}

svg {
    vertical-align: middle;
    fill: var(--color-text);
    height: 1.2rem;
    width: 1.2rem;
}

.overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 0;
    background-color: rgba(var(--color-primary-r), var(--color-primary-g), var(--color-primary-b), 0.95);
}

.inactive {
    cursor: not-allowed !important;
    transition: none !important;
    opacity: 0.5 !important;

    &:hover {
        transform: none !important;
    }
}

.goog-te-banner-frame,
.goog-te-menu-frame,
.skiptranslate {
    display: none !important;
}

